Constraintprog/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.1.4.exp
m2f: error: 
m2f:   setin.1.4.dzn:2 
m2f:   In assignment for 'x2'. 
m2f:   Value is out of range.
