Constraintprog/minizinc-1.6/tests/flattening/test-mzn2fzn/setin.2.4.dzn
x1 = 2;
x2 = {4};
